[gd_scene load_steps=10 format=3 uid="uid://cfr08rm4t77vh"]

[ext_resource type="Texture2D" uid="uid://dm0stnbtl8p5o" path="res://Zombies/DS DSi - Plants vs Zombies - Zombie.png" id="1_36l7i"]
[ext_resource type="Script" uid="uid://djuilo5uqgw6x" path="res://Zombies/regular_zombie.gd" id="1_qmil7"]

[sub_resource type="Animation" id="Animation_7y2tu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkingSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Eating:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6b7wu"]
resource_name = "eating"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eating:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_7ved8"]
resource_name = "idle"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkingSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_mj3lv"]
resource_name = "walking"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkingSprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wgo4c"]
_data = {
&"RESET": SubResource("Animation_7y2tu"),
&"eating": SubResource("Animation_6b7wu"),
&"idle": SubResource("Animation_7ved8"),
&"walking": SubResource("Animation_mj3lv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x4y1q"]
radius = 27.0
height = 112.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lfjc7"]
radius = 25.0
height = 112.0

[node name="RegularZombie" type="Node2D" groups=["zombies"]]
script = ExtResource("1_qmil7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walking"
libraries = {
"": SubResource("AnimationLibrary_wgo4c")
}

[node name="WalkingSprite" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_36l7i")
hframes = 7
region_enabled = true
region_rect = Rect2(112, 1, 183, 47)

[node name="Body" type="Area2D" parent="." groups=["zombies"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource("CapsuleShape2D_x4y1q")

[node name="TouchPlant" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchPlant"]
shape = SubResource("CapsuleShape2D_lfjc7")

[node name="Eating" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_36l7i")
hframes = 7
region_enabled = true
region_rect = Rect2(301, 4, 216, 44)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Body" to="." method="_on_body_area_entered"]
[connection signal="area_entered" from="TouchPlant" to="." method="_on_touch_plant_area_entered"]
[connection signal="area_exited" from="TouchPlant" to="." method="_on_touch_plant_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
